[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nbsite"
dynamic = ["version"]
description = "Build a tested, sphinx-based website from notebooks."
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.9"
authors = [
    { name = "HoloViz developers", email = "developers@holoviz.org" },
]
maintainers = [
    { name = "HoloViz developers", email = "developers@holoviz.org" },
]
classifiers = [
        "License :: OSI Approved :: BSD License",
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Natural Language :: English",
]

dependencies = [
    'param>=1.7.0',
    'pyviz_comms',
    'ipykernel',
    'nbformat',
    'nbconvert',
    'jupyter_client',
    'myst-nb>=1.1',
    'sphinx-design',
    'notebook',
    'sphinx>=7',
    'beautifulsoup4',
    'jinja2',
    'pillow',
    'portalocker',
    'pydata-sphinx-theme<0.17,>=0.15',
    'myst-parser>=3',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinxext-rediraffe',
    'packaging',
    'requests'
]

[project.scripts]
nbsite = "nbsite.__main__:main"

[project.optional-dependencies]
refman = ['graphviz']
gallery = [
    'selenium',
    'phantomjs',
]
tests = [
    'pytest >=3.9.1',
    'pre-commit',
]

[project.urls]
Documentation = "https://nbsite.holoviz.org/"
Source = "https://github.com/holoviz-dev/nbsite"
BugTracker = "https://github.com/holoviz-dev/nbsite/issues"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "nbsite/_version.py"

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".tox",
    ".eggs",
    "*.egg",
    "doc",
    "dist",
    "build",
    "_build",
    "examples",
    ".ipynb_checkpoints",
    "node_modules",
    "apps",
]
ignore = [
    "E402",
    "E712",
    "E731",
    "E741",
    "W605"
]
line-length = 165
select = [
    "E",
    "F",
    "W",
]

[tool.codespell]
ignore-words-list = "nd,doubleclick"
skip = "site/examples/playground/notebook_directive/preexecuted.ipynb"
write-changes = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "--color=yes"]
minversion = "7"
xfail_strict = true
log_cli_level = "INFO"
markers = ["slow: mark test as slow to run (deselect with '-m not slow')",]

[tool.isort]
force_grid_wrap = 4
multi_line_output = 5
combine_as_imports = true
lines_between_types = 1
include_trailing_comma = true
