[metadata]
name = nbsite
version = attr: param.version.get_setupcfg_version
description = Build a tested, sphinx-based website from notebooks
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
author = PyViz developers
author_email = developers@pyviz.org
maintainer = PyViz developers
maintainer_email = developers@pyviz.org
url = https://nbsite.pyviz.org
project_urls =
    Bug Tracker = https://github.com/pyviz/nbsite/issues
    Documentation = https://nbsite.pyviz.org
    Source Code = https://github.com/pyviz/nbsite

[options]
include_package_data = True
packages = find:
python_requires = >=3
install_requires =
    pyviz_comms
    jupyter_client
    ipykernel
    nbformat
    nbconvert
    notebook
    sphinx
    beautifulsoup4
; TODO: will be transferring to nbsite command...
scripts = scripts/nbsite_cleandisthtml.py

[options.extras_require]
tests =
    flake8
    pytest

refman =
    graphviz

gallery =
    selenium
    phantomjs

examples =
    pyct[cmd]
    sphinx_ioam_theme
    holoviews
    bokeh
    pillow
    matplotlib
    xarray
    pandas
    numpy

# gallery demo
#            'plotly'


[options.entry_points]
console_scripts =
    nbsite = nbsite.__main__:main

[tool:autover.configparser_workaround.archive_commit=$Format:%h$]

[wheel]
universal = 1

[tool:pyctdev.conda]
namespace_map =
    graphviz = python-graphviz 
